--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -4,14 +4,14 @@
 		<meta charset="utf-8">
 		<title>header and footer</title>
 	</head>
-	<body style= "margin: 0; padding: 0">
-		<header style="color: #FF0000 (red); height: 70px; width: 100%">
+	<body style= "margin: 0; padding: 0;">
+		<header style="background-color: #FF0000 (red); height: 70px; width: 100%;">
 			<h1 style="margin: 0;">This is the header</h1>
 		</header>
 		<main>
 			<p>header and footer</p>
 		</main>
-		<footer style="color: #00FF00 (green); height: 60px; width: 100%; text-align: center">
+		<footer style="background-color: #00FF00 (green); height: 60px; width: 100%; text-align: center; bottom: 0;">
 			<p>Best School &copy; 2024</p>
 		</footer>
 	</body>
