--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -12,9 +12,7 @@
 	</head>
 	<body>
 		<header>
-			<div class="logo">
-			</div>
-			<h1>header</h1>
+		<a href="#"></a>
 		</header>
 		<div class="container">
 			<section class="filters">
@@ -23,20 +21,25 @@
 					<h3>States</h3>
 					<h4>Arizon, California...</h4>
 					<ul class="popover">
-						<h2>California</h2>
-							<li>San fransisco</li>
-							<li>Los atos</li>
+						<li>
+							<h2>California:</h2>
+							<ul>
+								<li>San fransisco</li>
+								<li>Los atos</li>
+							</ul>
 
-						<h2>Arizona</h2>
-							<li>page</li>
-							<li>page2</li>
+							<h2>Arizona:</h2>
+							<ul>
+								<li>page</li>
+								<li>page2</li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 				<div class="amenities">
 					<h3>Amenities</h3>
 					<h4>Internet, Kitchen...</h4>
 					<ul class="popover">
-						<h2> </h2>
 						<li>kitchen</li>
 						<li>Tv</li>
 						<li>Internet</li>
