--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -7,14 +7,12 @@
 		<link rel="stylesheet" href="styles/3-header.css">
 		<link rel="stylesheet" href="styles/3-footer.css">
 		<link rel="stylesheet" href="styles/6-filters.css">
-		<link rel="stylesheet" href="styles/7-places.css">
+		<link rel="stylesheet" href="styles/8-places.css">
 		<link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 	</head>
 	<body>
 		<header>
-			<div class="logo">
-			</div>
-			<h1>header</h1>
+		<a href="#"></a>
 		</header>
 		<div class="container">
 			<section class="filters">
@@ -23,20 +21,25 @@
 					<h3>States</h3>
 					<h4>Arizon, California...</h4>
 					<ul class="popover">
-						<h2>California</h2>
-							<li>San fransisco</li>
-							<li>Los atos</li>
+						<li>
+							<h2>California:</h2>
+							<ul>
+								<li>San fransisco</li>
+								<li>Los atos</li>
+							</ul>
 
-						<h2>Arizona</h2>
-							<li>page</li>
-							<li>page2</li>
+							<h2>Arizona:</h2>
+							<ul>
+								<li>page</li>
+								<li>page2</li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 				<div class="amenities">
 					<h3>Amenities</h3>
 					<h4>Internet, Kitchen...</h4>
 					<ul class="popover">
-						<h2> </h2>
 						<li>kitchen</li>
 						<li>Tv</li>
 						<li>Internet</li>
@@ -47,12 +50,60 @@
 				<h1 id="title">places</h1>
 				<article>
 					<h2>My home</h2>
+					<div class="price_by_night">
+						$80
+					</div>
+					<div class="information">
+						<div Class="max_guest">2 guest</div>
+						<div Class="number_rooms">1 bedroom</div>
+						<div Class="number_bathroom">1 bathroom</div>
+					</div>
+					<div class="Owner">
+						<b> Owner:</b> John Lennon
+					</div>
+					<div class="decription">
+						This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people.
+						It locates at the center of Shanghai and next to subway line 1. 1 stop to People Square,
+						2 stops to Bund, 3 stops to Jingan Temple
+					</div>
 				</article>
 				<article>
 					<h2>Tiny house</h2>
+					<div class="price_by_night">
+						$65
+					</div>
+					<div class="information">
+						<div Class="max_guest">4 guest</div>
+						<div Class="number_rooms">2 bedroom</div>
+						<div Class="number_bathroom">1 bathroom</div>
+					</div>
+					<div class="user">
+						<b>Owner:</b> Adrienne
+					</div>
+					<div class="description">
+						Our place is a private, affordable stand-alone guets house centrally located just minutes to
+						French Quarters, downtown, the Fair Grounds (Jazz Fest) and City Park. The guest house is a quaint,
+						400 square ft. with a full bath, mini kitchen, & living room. The extra high ceilings make the hom
+						feel more spacious. The sofa converts to a bed also. We have a hand made counter area that adds
+						character to the room and a great porch/deck to relax on and have a glass of Merlot.
+					</div>
 				</article>
 				<article>
 					<h2>A Suite</h2>
+					<div class="price_by_night">
+						$190
+					</div>
+					<div class="information">
+						<div Class="max_guest">1 guest</div>
+						<div Class="number_rooms">5 bedroom</div>
+						<div Class="number_bathroom">5 toilet</div>
+					</div>
+					<div class="user">
+						<b>Owner:</b>
+					</div>
+					<div class="description">
+
+					</div>
 				</article>
 			</section>
 		</div>
