--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>header and footer</title>
-		<style>
-			body
-				{
-				margin: 0;
-				padding: 0;
-			}
-			header
-				{
-				color: #FF0000 (red);
-				height: 70px;
-				width: 100%
-			}
-			footer
-				{
-				color: #00FF00 (green);
-				height: 60px;
-				width: 100%;
-				text-align: center;
-				bottom: 0;
-			}
-		</style>
-	</head>
-	<body>
-		<header>
-			<h1>header</h1>
-		</header>
-		<footer>
-			<p>Best School &copy; 2024</p>
-		</footer>
-	</body>
-	
+<head>
+	<meta charset="utf-8">
+	<title>header and footer</title>
+	<style>
+		body	{
+			margin: 0;
+			padding: 0;
+		}
+		header	{
+		background-color: #FF0000 (red);
+		height: 70px;
+		width: 100%;
+		}
+		footer	{
+		background-color: #00FF00 (green);
+		height: 60px;
+		width: 100%;
+		text-align: center;
+		bottom: 0;
+		}
+	</style>
+</head>
+<body>
+	<header>
+		<h1>header</h1>
+	</header>
+	<footer>
+		<p>Best School &copy; 2024</p>
+	</footer>
+</body>
 </html>
